2009-07-18
	* www.weather.com can now be used as well as a source of weather data

2009-07-11
	* Added support for $desktop, $desktop_number and $desktop_name (sf.net #2040528)

2009-07-09
	* Added support for $swapfree
	* Improved Lua API (lua_read_parse has been removed in favour of the
	conky_parse() Lua API call)
	* Introduced new Lua Cairo and Imlib2 bindings

2009-07-08
	* Fixed a couple memory-related bugs

2009-07-06
	* Added support for $weather (experimental)

2009-07-04
	* Remove newline with comment only lines in TEXT
	* Improved parsing of graph arguments, removed "log"|"normal" arguments in
	favour of -l switch

2009-07-01
	* Fix escaping of comments in TEXT (sf.net #2813390, thanks Nils)

2009-06-29
	* Fix segfault in to_real_path, it's sometimes called with the same
	source and dest without checking the length, causing a segfault.

2009-06-20
	* Use the internal process list for if_running on Linux

2009-06-14
	* Fix XMMS2 related crash (sf.net #2806111 and #2805310, thanks Lassi)

2009-06-13
	* Added support for $blink
	* Added support for $to_bytes
	* Fix segfault due to bad checking of return values for inotify code
	(sf.net #2804886)
	* Added 'own_window_type panel' to make Conky behave like a panel (thanks
	Ole)

2009-06-12
	* Added support for per-task I/O statistics - $top_io

2009-06-11
	* Added border_inner_margin and border_outer_margin config options, and
	deprecated border_margin

2009-06-10
	* Fix regression with loading of non-Xft fonts (sf.net #2804324)

2009-06-09
	* Fixed a regression which causes fonts to not be rendered properly with
	certain types of windows
	* Added format_human_readable option (sf.net #2803345, thanks Vincent)
	* Fix bug in comments within TEXT (where the line contains just '#')
	(sf.net #2803586), thanks Pavelo
	* Fix bug in $mails (sf.net #2802529, thanks Nikos)

2009-06-08
	* $battery_short can now also display F (full), N (not present),E (empty),
	U (unknown)