@@ -353,13 +353,24 @@ dnl
 AC_ARG_ENABLE([weather],
 	      AC_HELP_STRING([--enable-weather], [enable if you want weather support @<:@default=no@:>@]),
 	      [want_weather="$enableval"], [want_weather=no])
+
+AC_ARG_ENABLE([xoap],
+	      AC_HELP_STRING([--enable-xoap], [enable if you want weather xoap support @<:@default=no@:>@]),
+	      [want_xoap="$enableval"], [want_xoap=no])
 #
 AM_CONDITIONAL(BUILD_WEATHER, test x$want_weather = xyes)
 if test x$want_weather = xyes; then
-	PKG_CHECK_MODULES([libxml2], libxml-2.0)
+        AM_CONDITIONAL(BUILD_XOAP, test x$want_xoap = xyes)
+        if test x$want_xoap = xyes; then
+	   PKG_CHECK_MODULES([libxml2], libxml-2.0)
+	   conky_CFLAGS="$conky_CFLAGS $libxml2_CFLAGS"
+	   conky_LIBS="$conky_LIBS $libxml2_LIBS"
+	   AC_DEFINE(XOAP, 1, [Define if you want weather xoap support])
+	   AC_DEFINE(XOAP_FILE, "$HOME/.xoaprc", [User xoap keys file])
+	fi
 	PKG_CHECK_MODULES([libcurl], libcurl)
-	conky_CFLAGS="$conky_CFLAGS $libxml2_CFLAGS $libcurl_CFLAGS"
-	conky_LIBS="$conky_LIBS $libxml2_LIBS $libcurl_LIBS"
+	conky_CFLAGS="$conky_CFLAGS $libcurl_CFLAGS"
+	conky_LIBS="$conky_LIBS $libcurl_LIBS"
 	AC_DEFINE(WEATHER, 1, [Define if you want weather support])
 fi
 
@@ -707,7 +718,6 @@ dnl
 
 AC_DEFINE(DEFAULTNETDEV, "eth0", [Default networkdevice])
 AC_DEFINE(CONFIG_FILE, "$HOME/.conkyrc", [Configfile of the user])
-AC_DEFINE(XOAP_FILE, "$HOME/.xoaprc", [User xoap keys file])
 AC_DEFINE(MAX_SPECIALS_DEFAULT, 512, [Default maximum number of special things, e.g. fonts, offsets, aligns, etc.])
 AC_DEFINE(MAX_USER_TEXT_DEFAULT, 16384, [Default maximum size of config TEXT buffer, i.e. below TEXT line.])
 AC_DEFINE(DEFAULT_TEXT_BUFFER_SIZE, 256, [Default size used for temporary, static text buffers])
