@@ -1,4 +1,10 @@
 2009-07-18
+	* add compilation switch --enable-xoap to be able to use
+	www.weather.com as a source of weather data (this avoids adding
+	libxml2 as a required dependency for users that wish to use noaa
+	and not weather.com)
+
+2009-07-18
 	* www.weather.com can now be used as well as a source of weather data
 
 2009-07-11
